# ShaarliHasFun

./: .gitignore  ChangeLog.md  Makefile  README.md  ShaarliHasFun.opam  dune  hello.hs  main.ml  package.yaml
lib/: a.ml  cgi.ml  dune  hello.ml  shell.ml
src/: Lib.hs
test/: banal_test.ml  dune
