opam-version: "2.0"
version: "0.0.1"
maintainer: "rohrmoser@0x4c.de"
authors: ["Marcus Rohrmoser"]
homepage: "https://code.mro.name/mro/ShaarliHasFun"
bug-reports: "https://notabug.org/mro/ShaarliHasFun/issues"
dev-repo: "git+https://code.mro.name/mro/ShaarliHasFun.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
